--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,9 @@
 language: python
 python:
-  - "3.8"
   - "3.9"
 
 install:
   - pip install -r requirements.txt
 
 script:
-  - make test
+  - make tests
